Change EventCard trying to make open event page animation z-index doesnt work properly ideally it should be positioned fixed

--- a/src/app/components/Gallery/Gallery.module.scss
+++ b/src/app/components/Gallery/Gallery.module.scss
@@ -11,55 +11,72 @@
    .card {
       position: relative;
       aspect-ratio: 2/3;
-      overflow: hidden;
+      cursor: pointer;
+      z-index: 1;
 
       &.filtered {
+         cursor: default;
+         pointer-events: none;
+
+         .cardContainer {
+            .image {
+               filter: blur(1rem);
+            }
+
+            .headline {
+               display: none;
+            }
+
+            .marker {
+               display: none;
+            }
+         }
+      }
+
+      .cardContainer {
+         overflow: hidden;
+         position: absolute;
+         inset: 0;
+         transition: inset .75s ease;
+
          .image {
-            filter: blur(1rem);
+            position: relative;
+            width: 100%;
+            height: 100%;
+
+            .src {
+               object-fit: cover;
+            }
          }
 
          .headline {
-            display: none;
-         }
+            position: absolute;
+            bottom: 0;
+            padding: 1rem;
+            gap: 1rem;
+            font-size: 1rem;
+            color: #fff;
+            font-weight: 600;
 
-         .marker {
-            display: none;
-         }
-      }
+            -webkit-font-smoothing: antialiased;
+            --stroke-color: #000;
+            --stroke-width: 1px;
+            text-shadow: var(--stroke-width) 0 0 var(--stroke-color),
+               calc(var(--stroke-width) * -1) 0 0 var(--stroke-color),
+               0 var(--stroke-width) 0 var(--stroke-color),
+               0 calc(var(--stroke-width) * -1) 0 var(--stroke-color);
 
-      .image {
-         height: 100%;
-         width: 100%;
-         object-fit: cover;
-      }
+            .title {
+               text-transform: uppercase;
+            }
 
-      .headline {
-         position: absolute;
-         bottom: 0;
-         padding: 1rem;
-         gap: 1rem;
-         font-size: 1rem;
-         color: #fff;
-         font-weight: 600;
+            .artist {
+               text-transform: capitalize;
 
-         -webkit-font-smoothing: antialiased;
-         --stroke-color: #000;
-         --stroke-width: 1px;
-         text-shadow: var(--stroke-width) 0 0 var(--stroke-color),
-            calc(var(--stroke-width) * -1) 0 0 var(--stroke-color),
-            0 var(--stroke-width) 0 var(--stroke-color),
-            0 calc(var(--stroke-width) * -1) 0 var(--stroke-color);
-
-         .title {
-            text-transform: uppercase;
-         }
-
-         .artist {
-            text-transform: capitalize;
-
-            &::before {
-               content: "•";
-               margin-inline: .3rem;
+               &::before {
+                  content: "•";
+                  margin-inline: .3rem;
+               }
             }
          }
       }
